--- a/.i3/config
+++ b/.i3/config
@@ -115,8 +115,8 @@ bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 
-bindsym $mod+Prior workspace prev
-bindsym $mod+Next workspace next
+bindsym $mod+Shift+Tab workspace prev
+bindsym $mod+Tab workspace next
 
 # move focused container to workspace
 bindsym $mod+Shift+ampersand move container to workspace 1
@@ -141,9 +141,8 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 
 # move focused workspace to a different monitor
-bindsym $mod+Shift+Tab move workspace to output left
-bindsym $mod+Tab move workspace to output right
-
+bindsym $mod+Prior move workspace to output left
+bindsym $mod+Next move workspace to output right
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
